# caliptra-mcu-sw

./: .gitignore  .gitmodules  Cargo.toml  README.md
.config/: nextest.toml
.github/workflows/: build-test.yml  caliptra-util-host-validator.yml  fpga.yml  spdm-validator.yml
builder/: Cargo.toml
builder/src/: all.rs  apps.rs  caliptra.rs  firmware.rs  flash_image.rs  lib.rs  network_rom.rs  rom.rs  runtime.rs  utils.rs
caliptra-util-host/: Cargo.toml  README.md  build.sh
caliptra-util-host/.cargo/: config.toml
caliptra-util-host/apps/mailbox/: README.md  test-config.toml
caliptra-util-host/apps/mailbox/client/: Cargo.toml
caliptra-util-host/apps/mailbox/client/src/: config.rs  lib.rs  main.rs  network_driver.rs  validator.rs
caliptra-util-host/apps/mailbox/config/: Cargo.toml
caliptra-util-host/apps/mailbox/config/src/: lib.rs
caliptra-util-host/apps/mailbox/server/: Cargo.toml
caliptra-util-host/apps/mailbox/server/src/: lib.rs  main.rs
caliptra-util-host/cbinding/: Cargo.toml  build.rs  cbindgen.toml
caliptra-util-host/cbinding/include/: caliptra_util_host.h
caliptra-util-host/cbinding/src/: command.rs  custom_transport.rs  error.rs  lib.rs  mailbox_transport.rs  session.rs  transport.rs  types.rs
caliptra-util-host/cbinding/tests/: Makefile  caliptra_test_utils.c  caliptra_test_utils.h  cbindgen_test.toml  test_custom_c_transport.c  test_get_device_id.c
caliptra-util-host/command-types/: Cargo.toml
caliptra-util-host/command-types/src/: certificate.rs  crypto_aes.rs  crypto_asymmetric.rs  crypto_delete.rs  crypto_hash.rs  crypto_hmac.rs  crypto_import.rs  debug.rs  device_info.rs  error.rs  fuse.rs  lib.rs
caliptra-util-host/commands/: Cargo.toml
caliptra-util-host/commands/src/: lib.rs  packing.rs
caliptra-util-host/commands/src/api/: crypto_aes.rs  crypto_asymmetric.rs  crypto_delete.rs  crypto_hash.rs  crypto_hmac.rs  crypto_import.rs  device_info.rs  mod.rs
caliptra-util-host/osal/: Cargo.toml
caliptra-util-host/osal/src/: error.rs  io.rs  lib.rs  memory.rs  sync.rs  thread.rs  time.rs
caliptra-util-host/session/: Cargo.toml
caliptra-util-host/session/src/: lib.rs
caliptra-util-host/src/: lib.rs
caliptra-util-host/tests/: Cargo.toml
caliptra-util-host/tests/src/: integration_tests.rs  lib.rs  test_aes.rs  test_crypto_asymmetric.rs  test_get_device_capabilities.rs  test_get_device_id.rs  test_get_device_info.rs  test_get_firmware_version.rs  test_hmac.rs  test_sha.rs
caliptra-util-host/tests/src/common/: mod.rs
caliptra-util-host/transport/: Cargo.toml
caliptra-util-host/transport/src/: error.rs  lib.rs
caliptra-util-host/transport/src/transports/: mod.rs
caliptra-util-host/transport/src/transports/mailbox/: aes.rs  checksum.rs  command_traits.rs  crypto_asymmetric.rs  delete.rs  device_info.rs  dispatch.rs  hmac.rs  import.rs  mod.rs  sha.rs  transport.rs
caliptra-util-host/xtask/: Cargo.toml
caliptra-util-host/xtask/src/: build.rs  clean.rs  main.rs  test.rs
common/config/: Cargo.toml
common/config/src/: boot.rs  flash.rs  lib.rs
common/mctp-vdm/: Cargo.toml
common/mctp-vdm/src/: codec.rs  error.rs
common/mcu-mbox/src/: messages.rs
common/testing/: Cargo.toml
common/testing/src/: i3c_socket.rs  lib.rs  mctp_vdm_transport.rs
docs/src/: SUMMARY.md  caliptra_util_host_library.md  cert_slot_mgmt.md  dot.md  external_mailbox_cmds.md  firmware_bundler.md  flash_layout.md  fpga.md  fuse_api_cmd.md  fuses.md  mcu.md  network_boot.md  provisioning.md  rom.md
emulator/app/: Cargo.toml
emulator/app/src/: emulator.rs
emulator/bmc/src/: recovery.rs
emulator/caliptra/src/: caliptra.rs
emulator/cbinding/: Cargo.toml  README.md  emulator.c
emulator/cbinding/src/: lib.rs  simple_test.rs
emulator/consts/: Cargo.toml
emulator/consts/src/: lib.rs
emulator/periph/: Cargo.toml
emulator/periph/src/: emu_ctrl.rs  i3c.rs  lib.rs  mci.rs  mcu_mbox0.rs  network_root_bus.rs  otp.rs  root_bus.rs
error/src/: lib.rs
firmware-bundler/: Cargo.toml
firmware-bundler/data/: default-app-layout.ld  default-kernel-layout.ld  default-rom-layout.ld
firmware-bundler/examples/: simple.toml
firmware-bundler/reference/emulator/: example-app.toml  user-app.toml
firmware-bundler/reference/fpga/: example-app.toml  user-app.toml
firmware-bundler/src/: args.rs  build.rs  bundle.rs  ld.rs  lib.rs  manifest.rs  size.rs  tbf.rs  utils.rs
hw/: flash_ctrl.rdl  fuses.hjson
hw/fpga/: README.md  create_caliptra_package.tcl  fpga_configuration.tcl  fpga_wrapper_regs.md
hw/fpga/src/: caliptra_fpga_realtime_regs.rdl  caliptra_fpga_realtime_regs.sv  caliptra_fpga_realtime_regs_pkg.sv  caliptra_package_top.v  caliptra_ss_top.patch  caliptra_wrapper_top.sv
hw/model/: Cargo.toml
hw/model/src/: debug_unlock.rs  flash_ctrl.rs  fpga_regs.rs  lib.rs  (+3 more)
network/config/: Cargo.toml
network/net/lwip-rs/: Cargo.toml  build.rs
network/net/lwip-rs/include/: lwipopts.h  wrapper.h
network/net/lwip-rs/src/: dhcp.rs  error.rs  ip.rs  lib.rs  netif.rs  sys.rs  tftp.rs
network/rom/: Cargo.toml  build.rs
ocp-eat-verifier/: Cargo.toml
ocp-eat-verifier/ocptoken-rs/: Cargo.toml
ocp-eat-verifier/ocptoken-rs/src/: error.rs  lib.rs  main.rs
ocp-eat-verifier/ocptoken-rs/src/token/: evidence.rs  mod.rs
ocp-eat-verifier/ocptoken-rs/tests/: test_evidence.rs
registers/fuses/: Cargo.toml
registers/fuses/src/: codegen.rs  lib.rs  schema.rs
rom/: Cargo.toml
rom/src/: boot_status.rs  cold_boot.rs  device_ownership_transfer.rs  fuse_layout.rs  fuses.rs  i3c.rs  image_verifier.rs  lib.rs  lifecycle.rs  otp.rs  recovery.rs  rom.rs  rom_env.rs  warm_boot.rs
romtime/: Cargo.toml
romtime/src/: lib.rs  mci.rs  soc_manager.rs
runtime/userspace/api/mctp-vdm-lib/: Cargo.toml
runtime/userspace/api/mctp-vdm-lib/src/: cmd_interface.rs  daemon.rs  error.rs  lib.rs  transport.rs
tests/integration/: Cargo.toml
tests/spdm_responder_validator/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: auth_manifest.rs  docs.rs  fuses.rs  header.rs  lib.rs  main.rs  precheckin.rs  registers.rs  rom.rs  runtime.rs  test.rs
(+159 files in other folders)
