# Licensed under the Apache-2.0 license

[workspace]
members = [
    "ocptoken-rs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Caliptra contributors"]

[workspace.dependencies]
coset = { git = "https://github.com/google/coset",rev = "3ebd2d7d0dafe2b6856934ea2b4fa28ea3d9a373"}
hex = "0.4"
thiserror = "2.0"
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "4", features = ["derive"] }