# Licensed under the Apache-2.0 license

[package]
name = "caliptra-util-host-cbinding"
version.workspace = true
edition.workspace = true
description = "C bindings for Caliptra utilities"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
caliptra-util-host-commands.workspace = true
caliptra-util-host-session.workspace = true
caliptra-util-host-transport.workspace = true
caliptra-util-host-command-types.workspace = true
caliptra-util-host-osal.workspace = true

[build-dependencies]
cbindgen.workspace = true
cc.workspace = true

[features]
default = ["std"]
std = ["caliptra-util-host-osal/std"]