# Licensed under the Apache-2.0 license

[package]
name = "caliptra-util-host-commands"
version.workspace = true
edition.workspace = true
description = "Command layer for Caliptra Utility Host Library"

[dependencies]
caliptra-util-host-osal.workspace = true
caliptra-util-host-session.workspace = true
caliptra-util-host-command-types.workspace = true
zerocopy.workspace = true