# Licensed under the Apache-2.0 license

[package]
name = "mcu-fuses-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde.workspace = true
serde-hjson.workspace = true
syn.workspace = true
