# Licensed under the Apache-2.0 license

[package]
name = "caliptra-mailbox-server"
version.workspace = true
edition.workspace = true
description = "Caliptra Mailbox Server Library and Application"

[[bin]]
name = "caliptra-mailbox-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
caliptra-util-host-mailbox-test-config.workspace = true
clap.workspace = true
zerocopy.workspace = true

[lib]
name = "caliptra_mailbox_server"
path = "src/lib.rs"